<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iot.project.caretaker.MainActivity">
<LinearLayout
    android:id="@+id/main_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:layout_marginStart="65dp"
    android:orientation="vertical"
    android:gravity="center">
    <ImageView
        android:id="@+id/ct_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/c_logo" />

    <Button
        android:id="@+id/quicktab_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/btn_layout"
        android:text="@string/quicktab_btn"
        android:onClick="onButtonClick"/>

    <Button
        android:id="@+id/reminder_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_layout"
        android:text="@string/reminder_btn"
        android:onClick="onButtonClick"/>

     <Button
         android:id="@+id/aboutme_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:background="@drawable/btn_layout"
         android:text="@string/about_user"
         android:onClick="onButtonClick"/>
</LinearLayout>
</RelativeLayout>
